--- a/package.json
+++ b/package.json
@@ -1,16 +1,23 @@
 {
   "name": "mtg-engine",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Magic: The Gathering rules engine in TypeScript",
+  "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc -p tsconfig.json",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "devDependencies": {
-    "prettier": "^3.7.4"
+    "@types/jest": "^29.5.14",
+    "jest": "^29.7.0",
+    "prettier": "^3.7.4",
+    "ts-node": "^10.9.2",
+    "ts-jest": "^29.3.4",
+    "typescript": "^5.7.3"
   }
 }
