--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "keywords": [],
   "author": "",
@@ -14,10 +16,21 @@
   "type": "commonjs",
   "devDependencies": {
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.21",
+    "@typescript-eslint/eslint-plugin": "^8.48.1",
+    "@typescript-eslint/parser": "^8.48.1",
+    "eslint": "^9.39.1",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-jest": "^29.2.1",
     "jest": "^29.7.0",
     "prettier": "^3.7.4",
-    "ts-node": "^10.9.2",
     "ts-jest": "^29.3.4",
-    "typescript": "^5.7.3"
+    "ts-node": "^10.9.2",
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.48.1"
+  },
+  "dependencies": {
+    "immer": "^11.0.1",
+    "lodash": "^4.17.21"
   }
 }
