--- a/package.json
+++ b/package.json
@@ -17,11 +17,13 @@
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/lodash": "^4.17.21",
+    "@types/seedrandom": "^3.0.8",
     "@typescript-eslint/eslint-plugin": "^8.48.1",
     "@typescript-eslint/parser": "^8.48.1",
     "eslint": "^9.39.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jest": "^29.2.1",
+    "eslint-plugin-simple-import-sort": "^12.1.1",
     "jest": "^29.7.0",
     "prettier": "^3.7.4",
     "ts-jest": "^29.3.4",
@@ -31,6 +33,7 @@
   },
   "dependencies": {
     "immer": "^11.0.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "seedrandom": "^3.0.5"
   }
 }
