--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "prepare": "husky"
   },
   "keywords": [],
   "author": "",
@@ -24,6 +27,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-jest": "^29.2.1",
     "eslint-plugin-simple-import-sort": "^12.1.1",
+    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "prettier": "^3.7.4",
     "ts-jest": "^29.3.4",
