--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,9 @@
       "@/*": ["src/*"]
     }
   },
+  "ts-node": {
+    "require": ["tsconfig-paths/register"]
+  },
   "include": ["src"],
   "exclude": ["dist", "node_modules"]
 }
